feat: complete backend acceleration and Breeze acceptance