@@ -15,6 +15,9 @@ that run identically on the JVM (`Array[Double]`) and in the browser
 | --- | --- | --- |
 | `gale-core` | `core/` | The library. `crossProject` (JVM + JS), `CrossType.Full`. Shared source in `core/shared`, platform storage/interop in `core/jvm` and `core/js`. |
 | `gale-laws` | `laws/` | Reusable, munit/ScalaCheck-backed **law bundles** (`VecLaws`, `MatrixLaws`, `SparseLaws`, `SolverLaws`) expressed against the public API. munit and ScalaCheck are *main* dependencies here — the bundles are library code you can call from your own tests. Depends on `gale-core`. |
+| `gale-backend-jvm-vector` | `backend-jvm-vector/` | Optional JDK Vector API GEMM backend with adaptive, measured dispatch. |
+| `gale-backend-jvm-native` | `backend-jvm-native/` | Optional JDK 22+ `NativeDMat` storage over FFM `MemorySegment`. |
+| `gale-backend-jvm-blas-ffm` | `backend-jvm-blas-ffm/` | Optional JDK 22+ runtime-discovered CBLAS backend (Accelerate/OpenBLAS/reference/MKL). |
 | benchmarks | `benchmarks/jvm`, `benchmarks/js` | JMH (JVM) and a Scala.js smoke runner. Compile-checked in CI; not published. |
 
 ### Package tour (`gale-core`)
@@ -32,8 +35,9 @@ that run identically on the JVM (`Array[Double]`) and in the browser
 
 ## Build, test, benchmark
 
-Requires JDK 21 and sbt (`project/build.properties` pins the sbt version). The
-build targets Scala 3.3.8.
+Core and the Vector backend require JDK 21; the finalized FFM modules require
+JDK 22+. sbt is pinned by `project/build.properties`. The build targets Scala
+3.3.8.
 
 ```sh
 sbt compileAll        # compile core + laws, JVM and JS
@@ -41,12 +45,38 @@ sbt testAll           # test core + laws, JVM and JS
 sbt testAllFull       # testAll, then a full-optimizing Scala.js link of the JS
                       # test bundles (a stricter check than fastLink)
 sbt benchCompile      # compile the JMH and Scala.js benchmarks
+sbt nativeBackendTest blasFfmBackendTest benchFfmCompile  # JDK 22+ native gates
 sbt benchSmokeJS      # run the Scala.js benchmark smoke runner (fastOpt)
 sbt benchSmokeJSFull  # the same under fullOpt
 ```
 
 Per-platform, per-module tasks also work directly, e.g. `sbt coreJVM/test`,
 `sbt lawsJS/test`, `sbt "coreJS/testOnly gale.sparse.*"`.
+
+## Optional acceleration backends
+
+No import uses Gale's pure JVM/JS kernels. On JDK 21 or 22, opt into the Vector
+backend with:
+
+```scala
+import gale.backend.jvm.vector.given
+val c = a * b
+```
+
+On JDK 22+, opt into runtime-discovered native CBLAS with:
+
+```scala
+import gale.backend.jvm.blas.given
+val c = a * b
+```
+
+The FFM loader checks `-Dgale.blas.library=/absolute/path` and
+`GALE_BLAS_LIBRARY` first, then probes OpenBLAS, the platform BLAS (including
+Accelerate), and MKL. Launch user applications with
+`--enable-native-access=ALL-UNNAMED`. Only known optimized library families
+dispatch automatically; generic/reference BLAS remains direct-callable but
+default-disabled until measured. The module advertises `NativeBlas`, not
+`NativeLapack`.
 
 ## Continuous integration
 
@@ -57,6 +87,8 @@ Per-platform, per-module tasks also work directly, e.g. `sbt coreJVM/test`,
   (`continue-on-error`) job so a compiler-next regression surfaces without gating
   merges.
 - **bench** — `benchCompile`.
+- **vector-backend** — Vector tests and JMH compilation on JDK 21 and 22.
+- **ffm-blas-backend** — native storage and FFM conformance on JDK 22 + OpenBLAS.
 - **wasm** — an experimental WebAssembly link check, allow-failure (see below).
 
 ## Experimental WebAssembly (Scala.js)
@@ -79,6 +111,18 @@ arguments (e.g. via `jsEnvInput` / `NodeJSEnv` args) before `coreJS/test`.
 The CI `wasm` job only performs the link check, since running requires that
 runtime flag; it is marked allow-failure so the experimental backend never gates
 the pipeline.
+
+## Breeze replacement scope
+
+Gale targets the dense real-`Double`, sparse-matvec, and selected spectral slice
+that numerical Scala libraries commonly used from Breeze. It is not a Breeze
+fork or a source-compatible replacement. Cross-library tests cover dense BLAS
+operations, solves and factorizations, rank/condition overlap, symmetric eigen,
+partial SVD, sparse/banded matvec, conversions, aliasing, and typed failure cases.
+
+See [`docs/breeze-equivalence.md`](docs/breeze-equivalence.md) for the capability
+matrix, measured performance statement, migration examples, and explicit
+non-equivalence boundary.
 
 ## `vendor/breeze`
 
